2005-01-18 14:09  Alexander Malmberg  <alexander@malmberg.org>

	* Source/Functions.m (NSDottedFrameRect, NSFrameRectWithWidth): Draw
	the frame inside the given rectangle.
	(NSDrawTiledRects): Remove documentation.
	* Headers/AppKit/NSGraphics.h (NSDottedFrameRect, NSFrameRect)
	(NSFrameRectWithWidth, NSDrawTiledRects): Add new documentation.

2005-01-17 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSWindow.m (-sendEvent:becomesKeyOnlyIfNeeded:): Give
	mouseDragged events to _lastView rather than view (if exists)
	underneath mouse.

2005-01-17 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m
	(-nextEventMatchingMask:untilDate:inMode:dequeue:): Check that
	event is not 'null_event' before using it to unhide mouse.

2005-01-17  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSBrowserCell.m (-setType:): New method, does nothing to
	allow image and text at once (MacOSX 10.2 behaviour).
	(-drawInteriorWithFrame:inView:): Draw an image or alternate image,
	if provided and draw the text as well.
	
2005-01-16  Fred Kiefer <FredKiefer@gmx.de>

	* Images/common_ClosedHandCursor.tiff: Replaced by new image files by
	Fabien Vallon <fabien@sonappart.net>.

2005-01-16  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.m (-_stringWithRTFCharacters:):
	Output "\uc0" so that other applications know we don't write ANSI
	representations of Unicode characters.

2005-01-16  Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m (+printerNames): Add dummy
	printer to list, if no printers are found.

2005-01-16 06:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: In validateMenuItem: added code to 
	properly set the undo/redo title and disable the menus when
	appropriate.

2005-01-15 05:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocument.m: Added undo:/redo: here.  Smarter use
	of the responder chain.
	* Source/NSWindow.m: Removed undo:/redo: here.
