@@ -1,3 +1,12 @@
+2005-01-18  Matt Rice <ratmice@yahoo.com>
+
+        * Source/NSTextView.m (setSelectedRange:): Do not make the selected text        visible.
+        (-didChangeText,-checkSpelling:): Make the selected text visible.
+        * Source/NSTextView_actions.m (_moveTo:select:): Ditto.
+        * Source/NSCell.m (-setUpFieldEditorAttributes:): Ditto.
+        (-selectWithFrame:inView:editor:delegate:start:length:): Ditto.
+        * Source/NSComboBoxCell (-validateSelection:,-textDidChange:): Ditto.
+
 2005-01-18 14:09  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/Functions.m (NSDottedFrameRect, NSFrameRectWithWidth): Draw
